--- a/Practica 5 - Jordi el millor/practica5.html
+++ b/Practica 5 - Jordi el millor/practica5.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- En aquest document HTML crearem una taula segons l'enunciat de la pràctica 5 -->
 <html>
     <head>
         <meta charset="utf8">
@@ -30,5 +31,4 @@
             </tr>
         </table>
     </body>
-
 </html>
