--- a/Practica5_b/Práctica5.html
+++ b/Practica5_b/Práctica5.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<!-- Es un HTML sobre como hacer una tabla con 4 columnas y 3 filas y con el título en azul y los headers con el fondo gris -->
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Práctica 5</title>
+        <title>Práctica 5</title con>
         <link rel="stylesheet"  href="Práctica5.css">
     </head>
     <body>
