--- a/Practica7_A/practica7_b.html
+++ b/Practica7_A/practica7_b.html
@@ -2,20 +2,19 @@
 <!-- Es un HTML sobre como hacer una tabla con 4 columnas y 3 filas y con el título en azul y los headers con el fondo gris -->
 <html>
     <head>
+        <!--Hecho por Amine Smairy-->
         <meta charset="utf-8">
         <title>Práctica 7</title>
         <link rel="stylesheet"  href="practica7_b.css">
     </head>
     <body>
         <body>
+            <!--Creación de los divs que usaremos para crear los cuadrados-->
             <div id="blau">
               <div id="groc"></div>
              </div>
-         </body>
-         <body>
             <div id="vermell">
               <div id="verd"></div>
              </div>
-         </body>
      </body>
 </html>
